# eld-trip-planner

./: .env.example  LICENSE  README.md  docker-compose.yml
frontend/: .dockerignore  Dockerfile  Trip Planner ELD API.yaml  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: authApi.ts  tripsApi.ts
frontend/src/components/: DailyLogsPanel.tsx  LocationInput.tsx  ProtectedRoute.tsx  RouteMap.tsx  StopTimeline.tsx  ThemeToggle.tsx  TripForm.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: LandingPage.tsx  LoginPage.tsx  PlannerPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ResultsPage.tsx  TripsPage.tsx
frontend/src/stores/: authStore.ts  themeStore.ts
frontend/src/types/: trip.ts
trip_planner/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  main.py  project.md  pyproject.toml
trip_planner/trip/: admin.py  auth_serializers.py  auth_views.py  models.py  serializers.py  urls.py  views.py
trip_planner/trip/migrations/: 0001_initial.py
trip_planner/trip/services/: eld_generator.py  hos_engine.py  route_service.py
trip_planner/trip/tests/: test_auth.py  test_eld_generator.py  test_hos_engine.py  test_models.py  test_route_service.py  test_views.py
trip_planner/trip_planner/: asgi.py  settings.py  urls.py  wsgi.py
